# DejaVu

./: .gitignore  .gitmodules  CMakeLists.txt  DejaVu.sln  License.md  Makefile  README.md
doc/: doxyfilerc
examples/: main.cpp
include/DejaVu/: DejaVu.hpp  DejaVuDecl.hpp  DejaVuTypes.hpp  types.hpp
include/DejaVu/Core/: Core.hpp  CoreDecl.hpp  CoreTypes.hpp  Image.hpp  Img.hpp  ImgT.hpp  Pixel.hpp  Shape.hpp  ShapeT.hpp
include/DejaVu/Core/templates/: Image.hpp  Pixel.hpp  Shape.hpp
include/DejaVu/ImageProcessing/: Clustering.hpp  ClusteringT.hpp  EdgeDetection.hpp  FeatureDetection.hpp  FeatureDetectionT.hpp  ImageProcessing.hpp  Misc.hpp  MiscT.hpp  Segmentation.hpp
include/DejaVu/MachineLearning/: NeuralNetwork.hpp  NeuralNetworkT.hpp  Perceptron.hpp
include/DejaVu/Processing/: PrImage.hpp  Processing.hpp  ProcessingDecl.hpp  ProcessingTypes.hpp
include/DejaVu/Processing/templates/: PrImage.hpp
lib/: DejaVu-Debug.lib
src/DejaVu/Core/: Img.cpp  Shape.cpp
src/DejaVu/Core/stb/: stb_image.cpp  stb_image_write.cpp
src/DejaVu/ImageProcessing/: EdgeDetection.cpp  FeatureDetection.cpp  Misc.cpp  Segmentation.cpp
src/DejaVu/MachineLearning/: NeuralNetwork.cpp  Perceptron.cpp
src/ImageProcessing/: Clustering.cpp
vs/DejaVu/: DejaVu.vcxitems  DejaVu.vcxitems.filters  DejaVu.vcxproj  DejaVu.vcxproj.filters
vs/DejaVuExamples/: DejaVuExamples.vcxproj
